# decesure

./: .gitignore  README.md  decesure.py  pyproject.toml
decesure/: __init__.py  index.py
