[tool.poetry]
name = "decesure"
version = "0.1.0"
description = "Un-hyphen"
authors = ["Mathieu Lecarme <mathieu@garambrogne.net>"]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/athoune/decesure"
keywords = ["hyphen", "nltk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
